# imprimis-gameserver

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake.yml
.semaphore/: semaphore.yml
config/: server-init.cfg
include/: readme.md.txt
src/: CMakeLists.txt  Makefile  ai.h  botbalance.cpp  botbalance.h  cmake_uninstall.cmake.in  command.cpp  command.h  crypto.cpp  cserver.cpp  cserver.h  ctf.h  cube.h  demo.cpp  demo.h  engine.h  game.h  geom.h  iengine.h  igame.h  mapcontrol.cpp  mapcontrol.h  server.cpp  stream.cpp  tools.cpp  tools.h  world.h  worldio.cpp
src/engine/: command.cpp  consts.h  cserver.cpp  cube.h  engine.h  entities.cpp  ents.h  game.h  iengine.h  server.cpp  tools.h  worldio.cpp
src/game/: ctf.h  game.h  server.cpp
src/shared/: crypto.cpp  cube.h  ents.h  iengine.h  stream.cpp  tools.h
vcpp/: vcpp.sln  vcpp.vcxproj  vcpp.vcxproj.filters
